# Dividir_para_multiplicar

./: .env.local  Dockerfile  docker-compose.yml  pyproject.toml
apps/courses/: admin.py  models.py  views.py
apps/courses/migrations/: 0001_initial.py  0002_category_course_status_course_category.py
apps/courses/templates/courses/: home.html
config/: settings.py  urls.py
courses/: admin.py  models.py
