[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meu-projeto-django"
version = "0.1.0"
description = "Um projeto Django moderno estruturado com pyproject.toml"
requires-python = ">=3.10"
authors = [
    { name = "Seu Nome", email = "seu.email@exemplo.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Django",
]
dependencies = [
    "asgiref==3.11.1",
    "Django==6.0.6",
    "psycopg==3.3.4",
    "psycopg-binary==3.3.4",
    "python-dotenv==1.2.2",
    "sqlparse==0.5.5",
    "tzdata==2026.2",
]

[tool.setuptools]
package-dir = {"" = "."}